extended sources
